--- a/QLSV/src/components/layout/FooterComponent.css
+++ b/QLSV/src/components/layout/FooterComponent.css
@@ -1,6 +1,6 @@
 
 .custom-footer {
-    background: linear-gradient(90deg, #4caf50, #2196f3); 
+    background: linear-gradient(90deg,#110b42); 
     color: white; 
     padding: 20px 0; 
   }
